//
// Created by student on 25.11.2019.
//
#pragma once
class Widget{
public:
    virtual void draw() = 0;
};
